// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput Matches the snapshot [disabled = true] 1`] = `
.c1 {
  color: #000000;
  display: block;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.25rem;
  margin: 0;
}

input + .c1 {
  margin-left: var(--spacing-half);
}

.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #D9DDE2;
}

.c0:focus {
  border-color: #0080A5;
}

.c2 {
  background: #FFFFFF;
  border: 1px solid #D9DDE2;
  border-radius: var(--border-radius);
  box-shadow: none;
  box-sizing: border-box;
  color: #000000;
  font-family: inherit;
  font-size: 0.875rem;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1.4rem;
  margin: 0;
  outline: none;
  padding: var(--spacing-half) var(--spacing-1x);
  width: 100%;
}

.c2::-webkit-input-placeholder {
  color: #57666E;
}

.c2::-moz-placeholder {
  color: #57666E;
}

.c2:-ms-input-placeholder {
  color: #57666E;
}

.c2::placeholder {
  color: #57666E;
}

.c2:disabled {
  background-color: #F1F2F2;
  border-color: #D9DDE2;
}

.c2:disabled,
.c2:disabled::-webkit-input-placeholder {
  color: #9CA7B4;
}

.c2:disabled,
.c2:disabled::-moz-placeholder {
  color: #9CA7B4;
}

.c2:disabled,
.c2:disabled:-ms-input-placeholder {
  color: #9CA7B4;
}

.c2:disabled,
.c2:disabled::placeholder {
  color: #9CA7B4;
}

.c2:focus {
  border-color: #0080A5;
}

label + .c2 {
  display: block;
  margin-top: var(--spacing-half);
}

<div
  className="c0"
>
  <label
    className="c1"
  >
    Telephone
  </label>
  <input
    className="c2"
    defaultValue="foo"
    disabled={true}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    pattern="[0-9]{3}-?[0-9]{3}-?[0-9]{4}"
    placeholder="Ex.: 555-123-4567"
    type="tel"
  />
</div>
`;

exports[`TextInput Matches the snapshot [required = true] 1`] = `
.c1 {
  color: #000000;
  display: block;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.25rem;
  margin: 0;
}

input + .c1 {
  margin-left: var(--spacing-half);
}

.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #D9DDE2;
}

.c0:focus {
  border-color: #0080A5;
}

.c2 {
  background: #FFFFFF;
  border: 1px solid #D9DDE2;
  border-radius: var(--border-radius);
  box-shadow: none;
  box-sizing: border-box;
  color: #000000;
  font-family: inherit;
  font-size: 0.875rem;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1.4rem;
  margin: 0;
  outline: none;
  padding: var(--spacing-half) var(--spacing-1x);
  width: 100%;
}

.c2::-webkit-input-placeholder {
  color: #57666E;
}

.c2::-moz-placeholder {
  color: #57666E;
}

.c2:-ms-input-placeholder {
  color: #57666E;
}

.c2::placeholder {
  color: #57666E;
}

.c2:disabled {
  background-color: #F1F2F2;
  border-color: #D9DDE2;
}

.c2:disabled,
.c2:disabled::-webkit-input-placeholder {
  color: #9CA7B4;
}

.c2:disabled,
.c2:disabled::-moz-placeholder {
  color: #9CA7B4;
}

.c2:disabled,
.c2:disabled:-ms-input-placeholder {
  color: #9CA7B4;
}

.c2:disabled,
.c2:disabled::placeholder {
  color: #9CA7B4;
}

.c2:focus {
  border-color: #0080A5;
}

label + .c2 {
  display: block;
  margin-top: var(--spacing-half);
}

<div
  className="c0"
>
  <label
    className="c1"
  >
    Telephone
  </label>
  <input
    className="c2"
    defaultValue="foo"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    pattern="[0-9]{3}-?[0-9]{3}-?[0-9]{4}"
    placeholder="Ex.: 555-123-4567"
    required={true}
    type="tel"
  />
</div>
`;

exports[`TextInput Matches the snapshot 1`] = `
.c1 {
  color: #000000;
  display: block;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.25rem;
  margin: 0;
}

input + .c1 {
  margin-left: var(--spacing-half);
}

.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #D9DDE2;
}

.c0:focus {
  border-color: #0080A5;
}

.c2 {
  background: #FFFFFF;
  border: 1px solid #D9DDE2;
  border-radius: var(--border-radius);
  box-shadow: none;
  box-sizing: border-box;
  color: #000000;
  font-family: inherit;
  font-size: 0.875rem;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1.4rem;
  margin: 0;
  outline: none;
  padding: var(--spacing-half) var(--spacing-1x);
  width: 100%;
}

.c2::-webkit-input-placeholder {
  color: #57666E;
}

.c2::-moz-placeholder {
  color: #57666E;
}

.c2:-ms-input-placeholder {
  color: #57666E;
}

.c2::placeholder {
  color: #57666E;
}

.c2:disabled {
  background-color: #F1F2F2;
  border-color: #D9DDE2;
}

.c2:disabled,
.c2:disabled::-webkit-input-placeholder {
  color: #9CA7B4;
}

.c2:disabled,
.c2:disabled::-moz-placeholder {
  color: #9CA7B4;
}

.c2:disabled,
.c2:disabled:-ms-input-placeholder {
  color: #9CA7B4;
}

.c2:disabled,
.c2:disabled::placeholder {
  color: #9CA7B4;
}

.c2:focus {
  border-color: #0080A5;
}

label + .c2 {
  display: block;
  margin-top: var(--spacing-half);
}

<div
  className="c0"
>
  <label
    className="c1"
  >
    Telephone
  </label>
  <input
    className="c2"
    defaultValue="foo"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    pattern="[0-9]{3}-?[0-9]{3}-?[0-9]{4}"
    placeholder="Ex.: 555-123-4567"
    type="tel"
  />
</div>
`;
